--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
       function DetectAndRedirect() {
         if (getMobileOS() == "Android") {
-          window.location.href = "https://play.google.com/store/apps/details?id=com.your.AppName";
+          window.location.href = "https://play.google.com/store/apps/details?id=com.vesselcanada";
         }
         if (getMobileOS() == "iOS") {
-          window.location.href = "https://apps.apple.com/US/app/idOfYourAPP";
+          window.location.href = "https://apps.apple.com/us/app/vessel/id1602000182";
         }
         if (!getMobileOS()) {
-          window.location.href = "https://apps.apple.com/US/app/idOfYourAPP";
+          window.location.href = "https://apps.apple.com/us/app/vessel/id1602000182";
         }
       };
     </script>
